# fastnet2n2k

./: README.md  TODO.md  fastnet2n2k.service  nmea2000_poc.py  pyproject.toml  requirements.txt
docs/: uart_first_open_baud_fix.md  v3_migration_notes.md
fastnet2n2k/: __init__.py  __main__.py  display.py  input_source.py  line_settings.py  live_store.py  mapping.py
tests/: test_input_source.py  test_line_settings.py  test_mapping.py  test_pipeline.py  test_serial_reader.py
