[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastnet2n2k"
dynamic = ["version"]
description = "Bridge a B&G Fastnet instrument stream onto an NMEA2000 CAN bus"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ghotihook" }]
keywords = ["nmea2000", "fastnet", "n2k", "canbus", "marine", "b&g", "socketcan"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Communications",
]
dependencies = [
  "nmea2000>=2026.5",
  "python-can>=4.5",
  "pyfastnet>=2.0.17",
  "pyserial>=3.5",
]

[project.scripts]
fastnet2n2k = "fastnet2n2k.__main__:main"

[project.urls]
Homepage = "https://github.com/ghotihook/fastnet2n2k"
Repository = "https://github.com/ghotihook/fastnet2n2k"
Issues = "https://github.com/ghotihook/fastnet2n2k/issues"

[tool.hatch.version]
path = "fastnet2n2k/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["fastnet2n2k"]

[tool.hatch.build.targets.sdist]
include = ["fastnet2n2k", "README.md", "LICENSE", "fastnet2n2k.service"]
